<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:background="#eb000000"
    android:padding="10dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:adjustViewBounds="true"
        android:contentDescription="@string/unlock_unlocked"
        android:src="@drawable/unlock_right"
        android:layout_alignParentStart="true" />


    <ImageView

        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:adjustViewBounds="true"
        android:contentDescription="@string/unlock_unlocked"
        android:src="@drawable/unlock_left"
        android:layout_alignParentEnd="true" />


    <TextView
        android:id="@+id/text_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/unlock_instructions"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="italic"
        android:visibility="gone" />

    <com.cunoraz.gifview.library.GifView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginRight="@dimen/_5sdp"
        android:padding="@dimen/_8sdp"
        android:layout_toStartOf="@+id/imageCenter"
        android:layout_toLeftOf="@+id/imageCenter"
        android:visibility="visible"
        app:paused="false"
        custom:gif="@drawable/gif_arrow_left"
        android:layout_marginEnd="@dimen/_5sdp" />

    <!-- <ImageView
         android:layout_height="20dp"
         android:layout_width="20dp"
         android:layout_marginRight="10dp"
         android:src="@drawable/arrow_left"
         android:layout_centerVertical="true"
         android:layout_toStartOf="@+id/imageCenter"
         android:layout_toLeftOf="@+id/imageCenter"
         android:adjustViewBounds="true" />-->

    <ImageView
        android:id="@+id/imageCenter"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:contentDescription="@string/unlock_locked"
        android:src="@drawable/unlock_thumb" />


    <!-- <ImageView
         android:layout_height="20dp"
         android:layout_width="20dp"
         android:layout_marginLeft="10dp"
         android:src="@drawable/arrow_right"
         android:layout_centerVertical="true"
         android:layout_toEndOf="@+id/imageCenter"
         android:layout_toRightOf="@+id/imageCenter"
         android:adjustViewBounds="true" />-->
    <com.cunoraz.gifview.library.GifView
        android:id="@+id/arrow_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_toEndOf="@+id/imageCenter"
        android:layout_toRightOf="@+id/imageCenter"
        android:visibility="visible"
        app:paused="false"
        custom:gif="@drawable/gif_arrow_right"
        android:layout_marginStart="@dimen/_5sdp" />

    <ImageView
        android:id="@+id/img_thumb"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:adjustViewBounds="true"
        android:contentDescription="@string/unlock_thumb"
        android:src="@drawable/lock"
        android:layout_alignParentStart="true" />


</RelativeLayout>