<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:background="#203040"
    android:orientation="vertical"
    tools:context=".ui.splash.StartAppActivity">

    <com.cunoraz.gifview.library.GifView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:visibility="visible"
        app:paused="false"
        custom:gif="@drawable/flash" />
   <!-- <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="7">

        <ImageView
            android:id="@+id/imageView_upper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="@dimen/dp_4"
            android:layout_marginBottom="@dimen/_15sdp"
            android:src="@mipmap/app_icon_round_white" />

    </LinearLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/signup"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_30dp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_30dp"
            android:background="@drawable/rounded_button_signup"
            android:gravity="center"
            android:padding="@dimen/_15sdp"
            android:text="@string/sign_up"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/login"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_30dp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_30dp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/rounded_button_login"
            android:gravity="center"
            android:padding="@dimen/_15sdp"
            android:text="@string/log_in"
            android:textColor="@color/white" />
    </LinearLayout>
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/adsBannerSplash" />
</RelativeLayout>